[package]
name = "schach"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy_mod_picking = "0.9.0"

[profile.dev]
opt-level = 1 # Enable a small amount of optimization in debug mode

[profile.dev.package."*"]
opt-level = 3 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
